fixed box overflowing

--- a/app/App.scss
+++ b/app/App.scss
@@ -22,4 +22,8 @@ body {
 
 .Album {
   // float: 'left';
+  img {
+    max-width: 100%;
+    max-height:100%;
+  }
 }
